--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minima
-title: James's recipes
-description: Simple recipes
+title: No Journey Recipes
+description: Simple recepies.  Balance of effort/taste.  No stories about my Grandma.  This is mostly for me, covering what I cook for my family.  If it benefits someone else, great.  No implied warranty in any of these recipes.
+
