--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: No Journey Recipes
-description: Simple recepies.  Balance of effort/taste.  No stories about my Grandma.  This is mostly for me, covering what I cook for my family.  If it benefits someone else, great.  No implied warranty in any of these recipes.
+description: Simple recepies to remind me how to make things my family like, without having to look up ad-infested recepies online.  No heart-warming AI generated stories about my Grandma's cooking for the benfit of SEO.
 
