--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: No Journey Recipes
-description: Simple recepies to remind me how to make things my family like, without having to look up ad-infested recepies online.  No heart-warming AI generated stories about my Grandma's cooking for the benfit of SEO.
+description: Simple recepies to remind me how to make what my family like, without having to look up ad-infested recepies online.  No LLM-generated stories about my Grandma's cooking for SEO.
 
